--- a/requirements.txt
+++ b/requirements.txt
@@ -52,6 +52,7 @@ pexpect==4.8.0
 phik==0.10.0
 pickleshare==0.7.5
 Pillow==7.2.0
+plotly==4.11.0
 prometheus-client==0.8.0
 prompt-toolkit==3.0.7
 ptyprocess==0.6.0
@@ -67,6 +68,7 @@ pyzmq==19.0.2
 qtconsole==4.7.7
 QtPy==1.9.0
 requests==2.24.0
+retrying==1.3.3
 scikit-learn==0.23.2
 scipy==1.5.2
 seaborn==0.11.0
